--- a/a.ipynb
+++ b/a.ipynb
@@ -2,43 +2,218 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "id": "bb92824e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas \n",
+    "import pandas as pd\n",
     "import requests"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9b7fc754",
+   "execution_count": 32,
+   "id": "daa79533",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = pd.DataFrame()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "28767d66",
+   "execution_count": 33,
+   "id": "ef797372",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for i in range(1,429):\n",
+    "    response = requests.get('https://api.themoviedb.org/3/movie/top_rated?api_key=8265bd1679663a7ea12ac168da84d2e8&language=en-US&page={}'.format(i))\n",
+    "    temp_df = pd.DataFrame(response.json()['results'])[['id','title','overview','genre_ids']]\n",
+    "    df = pd.concat([df,temp_df],ignore_index=True)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
+   "id": "945c6b67",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>title</th>\n",
+       "      <th>overview</th>\n",
+       "      <th>genre_ids</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>278</td>\n",
+       "      <td>The Shawshank Redemption</td>\n",
+       "      <td>Imprisoned in the 1940s for the double murder ...</td>\n",
+       "      <td>[18, 80]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>238</td>\n",
+       "      <td>The Godfather</td>\n",
+       "      <td>Spanning the years 1945 to 1955, a chronicle o...</td>\n",
+       "      <td>[18, 80]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>240</td>\n",
+       "      <td>The Godfather Part II</td>\n",
+       "      <td>In the continuing saga of the Corleone crime f...</td>\n",
+       "      <td>[18, 80]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>424</td>\n",
+       "      <td>Schindler's List</td>\n",
+       "      <td>The true story of how businessman Oskar Schind...</td>\n",
+       "      <td>[18, 36, 10752]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>389</td>\n",
+       "      <td>12 Angry Men</td>\n",
+       "      <td>The defense and the prosecution have rested an...</td>\n",
+       "      <td>[18]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    id                     title  \\\n",
+       "0  278  The Shawshank Redemption   \n",
+       "1  238             The Godfather   \n",
+       "2  240     The Godfather Part II   \n",
+       "3  424          Schindler's List   \n",
+       "4  389              12 Angry Men   \n",
+       "\n",
+       "                                            overview        genre_ids  \n",
+       "0  Imprisoned in the 1940s for the double murder ...         [18, 80]  \n",
+       "1  Spanning the years 1945 to 1955, a chronicle o...         [18, 80]  \n",
+       "2  In the continuing saga of the Corleone crime f...         [18, 80]  \n",
+       "3  The true story of how businessman Oskar Schind...  [18, 36, 10752]  \n",
+       "4  The defense and the prosecution have rested an...             [18]  "
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "id": "baf04a29",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "genre_url  = 'https://api.themoviedb.org/3/genre/movie/list?api_key=8265bd1679663a7ea12ac168da84d2e8&language=en-US'\n",
+    "g_response = requests.get(genre_url)\n",
+    "genres = g_response.json()['genres']\n",
+    "\n",
+    "genre_dict = {g['id']: g['name'] for g in genres}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "a3bd5552",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['genres'] = df['genre_ids'].apply(\n",
+    "    lambda x: [genre_dict[i] for i in x]\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "a3936e21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['genres'] = df['genres'].apply(lambda x: \", \".join(x))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "437c3b10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.drop(columns=['genre_ids','id'],inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "73d36ab0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"MovieDataset.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "6ad2e280",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(8560, 3)"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3bd5552",
+   "id": "244b88cc",
    "metadata": {},
    "outputs": [],
    "source": []
