Completed NLP text Preprocessing

--- a/a.ipynb
+++ b/a.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 49,
    "id": "bb92824e",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import requests"
+    "import requests\n",
+    "import re"
    ]
   },
   {
@@ -211,9 +212,451 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "350ee8ac",
+   "metadata": {},
+   "source": [
+    "# Steps to Apply For NLP Pipeline\n",
+    "1) Lower casing\n",
+    "2) Remove HTML Tags\n",
+    "3) Remove URLs\n",
+    "4) Remove Punctuation\n",
+    "5) Chat Word Treatment (Not Needed for Movie Dataset, Already Professional)\n",
+    "6) Spelling Check (Not Needed for Movie Dataset, Already Professional)\n",
+    "7) Removing StopWords\n",
+    "8) Handling Emojis\n",
+    "9) Tokenization\n",
+    "10) Stemming"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "39c7f443",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>overview</th>\n",
+       "      <th>genres</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>The Shawshank Redemption</td>\n",
+       "      <td>Imprisoned in the 1940s for the double murder ...</td>\n",
+       "      <td>Drama, Crime</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>The Godfather</td>\n",
+       "      <td>Spanning the years 1945 to 1955, a chronicle o...</td>\n",
+       "      <td>Drama, Crime</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>The Godfather Part II</td>\n",
+       "      <td>In the continuing saga of the Corleone crime f...</td>\n",
+       "      <td>Drama, Crime</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Schindler's List</td>\n",
+       "      <td>The true story of how businessman Oskar Schind...</td>\n",
+       "      <td>Drama, History, War</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>12 Angry Men</td>\n",
+       "      <td>The defense and the prosecution have rested an...</td>\n",
+       "      <td>Drama</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      title  \\\n",
+       "0  The Shawshank Redemption   \n",
+       "1             The Godfather   \n",
+       "2     The Godfather Part II   \n",
+       "3          Schindler's List   \n",
+       "4              12 Angry Men   \n",
+       "\n",
+       "                                            overview               genres  \n",
+       "0  Imprisoned in the 1940s for the double murder ...         Drama, Crime  \n",
+       "1  Spanning the years 1945 to 1955, a chronicle o...         Drama, Crime  \n",
+       "2  In the continuing saga of the Corleone crime f...         Drama, Crime  \n",
+       "3  The true story of how businessman Oskar Schind...  Drama, History, War  \n",
+       "4  The defense and the prosecution have rested an...                Drama  "
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "244b88cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['overview'] = df['overview'].str.lower()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "2cd6fc4f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_html_tags(text):\n",
+    "    return re.sub(r'<[^>]+>', '', text)\n",
+    "\n",
+    "df['overview'] = df['overview'].apply(remove_html_tags)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "c2a2fbdb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_urls(text):\n",
+    "    if isinstance(text, str):\n",
+    "        return re.sub(r'https?://\\S+|www\\.\\S+', '', text)\n",
+    "    return text\n",
+    "\n",
+    "df['overview'] = df['overview'].apply(remove_urls)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "fe431152",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import string\n",
+    "\n",
+    "exclude = string.punctuation\n",
+    "\n",
+    "def remove_punc(text):\n",
+    "    return text.translate(str.maketrans('','',exclude))\n",
+    "\n",
+    "df['overview'] = df['overview'].apply(remove_punc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "e9683b6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\sukku\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import nltk\n",
+    "from nltk.corpus import stopwords\n",
+    "nltk.download('stopwords')\n",
+    "\n",
+    "# Load stopwords once\n",
+    "stop_words = set(stopwords.words('english'))\n",
+    "\n",
+    "def remove_stop_words(text):\n",
+    "    if not isinstance(text, str):\n",
+    "        return text\n",
+    "    words = text.split()\n",
+    "    filtered_words = [word for word in words if word.lower() not in stop_words]\n",
+    "    return \" \".join(filtered_words)\n",
+    "\n",
+    "df['overview'] = df['overview'].apply(remove_stop_words)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "244b88cc",
+   "id": "3338faa8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>overview</th>\n",
+       "      <th>genres</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>The Shawshank Redemption</td>\n",
+       "      <td>imprisoned 1940s double murder wife lover upst...</td>\n",
+       "      <td>Drama, Crime</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>The Godfather</td>\n",
+       "      <td>spanning years 1945 1955 chronicle fictional i...</td>\n",
+       "      <td>Drama, Crime</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>The Godfather Part II</td>\n",
+       "      <td>continuing saga corleone crime family young vi...</td>\n",
+       "      <td>Drama, Crime</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Schindler's List</td>\n",
+       "      <td>true story businessman oskar schindler saved t...</td>\n",
+       "      <td>Drama, History, War</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>12 Angry Men</td>\n",
+       "      <td>defense prosecution rested jury filing jury ro...</td>\n",
+       "      <td>Drama</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      title  \\\n",
+       "0  The Shawshank Redemption   \n",
+       "1             The Godfather   \n",
+       "2     The Godfather Part II   \n",
+       "3          Schindler's List   \n",
+       "4              12 Angry Men   \n",
+       "\n",
+       "                                            overview               genres  \n",
+       "0  imprisoned 1940s double murder wife lover upst...         Drama, Crime  \n",
+       "1  spanning years 1945 1955 chronicle fictional i...         Drama, Crime  \n",
+       "2  continuing saga corleone crime family young vi...         Drama, Crime  \n",
+       "3  true story businessman oskar schindler saved t...  Drama, History, War  \n",
+       "4  defense prosecution rested jury filing jury ro...                Drama  "
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "8c1a5728",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import spacy\n",
+    "nlp = spacy.load(\"en_core_web_sm\")\n",
+    "\n",
+    "def tokenize(text):\n",
+    "    if not isinstance(text, str):\n",
+    "        return []\n",
+    "    doc = nlp(text)\n",
+    "    return [token.text for token in doc]\n",
+    "    \n",
+    "df['tokens'] = df['overview'].apply(tokenize)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "a9150e88",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.stem.porter import PorterStemmer\n",
+    "\n",
+    "ps = PorterStemmer()\n",
+    "def stem_tokens(token_list):\n",
+    "    return [ps.stem(word) for word in token_list]\n",
+    "\n",
+    "df['stemized'] = df['tokens'].apply(stem_tokens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "f3922dc6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>overview</th>\n",
+       "      <th>genres</th>\n",
+       "      <th>tokens</th>\n",
+       "      <th>stemized</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>The Shawshank Redemption</td>\n",
+       "      <td>imprisoned 1940s double murder wife lover upst...</td>\n",
+       "      <td>Drama, Crime</td>\n",
+       "      <td>[imprisoned, 1940s, double, murder, wife, love...</td>\n",
+       "      <td>[imprison, 1940, doubl, murder, wife, lover, u...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>The Godfather</td>\n",
+       "      <td>spanning years 1945 1955 chronicle fictional i...</td>\n",
+       "      <td>Drama, Crime</td>\n",
+       "      <td>[spanning, years, 1945, 1955, chronicle, ficti...</td>\n",
+       "      <td>[span, year, 1945, 1955, chronicl, fiction, it...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>The Godfather Part II</td>\n",
+       "      <td>continuing saga corleone crime family young vi...</td>\n",
+       "      <td>Drama, Crime</td>\n",
+       "      <td>[continuing, saga, corleone, crime, family, yo...</td>\n",
+       "      <td>[continu, saga, corleon, crime, famili, young,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Schindler's List</td>\n",
+       "      <td>true story businessman oskar schindler saved t...</td>\n",
+       "      <td>Drama, History, War</td>\n",
+       "      <td>[true, story, businessman, oskar, schindler, s...</td>\n",
+       "      <td>[true, stori, businessman, oskar, schindler, s...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>12 Angry Men</td>\n",
+       "      <td>defense prosecution rested jury filing jury ro...</td>\n",
+       "      <td>Drama</td>\n",
+       "      <td>[defense, prosecution, rested, jury, filing, j...</td>\n",
+       "      <td>[defens, prosecut, rest, juri, file, juri, roo...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      title  \\\n",
+       "0  The Shawshank Redemption   \n",
+       "1             The Godfather   \n",
+       "2     The Godfather Part II   \n",
+       "3          Schindler's List   \n",
+       "4              12 Angry Men   \n",
+       "\n",
+       "                                            overview               genres  \\\n",
+       "0  imprisoned 1940s double murder wife lover upst...         Drama, Crime   \n",
+       "1  spanning years 1945 1955 chronicle fictional i...         Drama, Crime   \n",
+       "2  continuing saga corleone crime family young vi...         Drama, Crime   \n",
+       "3  true story businessman oskar schindler saved t...  Drama, History, War   \n",
+       "4  defense prosecution rested jury filing jury ro...                Drama   \n",
+       "\n",
+       "                                              tokens  \\\n",
+       "0  [imprisoned, 1940s, double, murder, wife, love...   \n",
+       "1  [spanning, years, 1945, 1955, chronicle, ficti...   \n",
+       "2  [continuing, saga, corleone, crime, family, yo...   \n",
+       "3  [true, story, businessman, oskar, schindler, s...   \n",
+       "4  [defense, prosecution, rested, jury, filing, j...   \n",
+       "\n",
+       "                                            stemized  \n",
+       "0  [imprison, 1940, doubl, murder, wife, lover, u...  \n",
+       "1  [span, year, 1945, 1955, chronicl, fiction, it...  \n",
+       "2  [continu, saga, corleon, crime, famili, young,...  \n",
+       "3  [true, stori, businessman, oskar, schindler, s...  \n",
+       "4  [defens, prosecut, rest, juri, file, juri, roo...  "
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8196914",
    "metadata": {},
    "outputs": [],
    "source": []
