--- a/TextPreprocessing.ipynb
+++ b/TextPreprocessing.ipynb
@@ -224,7 +224,7 @@
     "5) Chat Word Treatment (Not Needed for Movie Dataset, Already Professional)\n",
     "6) Spelling Check (Not Needed for Movie Dataset, Already Professional)\n",
     "7) Removing StopWords\n",
-    "8) Handling Emojis\n",
+    "8) Handling Emojis (Not Needed)\n",
     "9) Tokenization\n",
     "10) Stemming"
    ]
